<resources>
    <string name="app_name">AppControlMoto</string>
    <string name="title_activity_loguin">Loguin</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="valbtnlogin">LOGIN</string>
    <string name="valbtnRegistro">REGISTRAR</string>
    <string name="vlsingin">INICIAR</string>
    <string name="vlregistrar">REGISTRAR</string>
    <string name="title_activity_menu">Menu</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="olvidaste_text"><u> Olvidaste tu Contraseña ? </u></string>
    <string name="valparrafoUno">La presente política de privacidad de Willariq establece que no se recopila información del usuario sin su conocimiento y consentimiento previo. Para ofrecer servicios de emergencia y seguridad, la aplicación puede solicitar la ubicación del dispositivo y el número de teléfono, los cuales el usuario proporcionará de manera voluntaria. Willariq garantiza que estos datos serán utilizados exclusivamente para los fines indicados y no se compartirán con terceros sin consentimiento, salvo obligación legal. Nos comprometemos a proteger la privacidad de los usuarios. Esta política puede ser actualizada, por lo que recomendamos revisarla periódicamente para estar al tanto de posibles cambios.</string>
    <string name="valParrafoDos">Nuestra aplicación Willariq solo recopila información temporal, que el usuario ingresa al llenar el formulario para emergencias, donde se solicita enviar su ubicación exacta. Esta información se utiliza exclusivamente para brindar asistencia durante situaciones de emergencia y se elimina una vez que ha sido atendida. La aplicación no almacena datos a largo plazo y solo recoge la ubicación temporalmente para asegurar una respuesta eficiente en emergencias.</string>
    <string name="valparrafortres">El uso de la información en Willariq es temporal. En situaciones de emergencia, es necesario contar con la ubicación exacta para brindar asistencia de manera eficiente. Una vez que la emergencia ha sido atendida, la información recopilada se elimina, ya que se vuelve irrelevante y solo ocuparía espacio en nuestros servidores.</string>
    <string name="parraforCuatro">Nuestra aplicación Willariq no utiliza enlaces de terceros, excepto un enlace que redirige a las políticas de privacidad y el uso de la API de WhatsApp para enviar mensajes en situaciones de emergencia. Estos mensajes se envían directamente desde la aplicación a través de WhatsApp para asegurar una comunicación rápida y efectiva, sin almacenar datos innecesarios</string>
    <string name="vaterminosycondiciones">" términos y condiciones * "</string>
    <string name="terminosycondi">Estoy de acuerdo con los</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
</resources>