<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TerminosCondiciones">
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:cardCornerRadius="4dp"
        android:elevation="8dp"
        android:layout_margin="8dp" >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal|center_vertical"
            android:orientation="vertical">

            <TextView
                android:id="@+id/titulouno"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="POLÍTICA DE PRIVACIDAD APLICACIÓN APPMOTO"
                android:textAlignment="center"
                android:textSize="18dp"
                android:textStyle="bold" />

            <com.codesgood.views.JustifiedTextView
                android:id="@+id/parradoUno"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:layout_marginTop="20dp"
                android:gravity="center"
                android:text="@string/valparrafoUno"
                android:textColor="@color/black"
                android:textSize="17sp" />

            <TextView
                android:id="@+id/titulodos"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="INFORMACIÓN QUE ES RECOLECTADA"
                android:textAlignment="center"
                android:textSize="18dp"
                android:textStyle="bold" />

            <com.codesgood.views.JustifiedTextView
                android:id="@+id/parradodos"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:layout_marginTop="20dp"
                android:gravity="center"
                android:text="@string/valParrafoDos"
                android:textColor="@color/black"
                android:textSize="17sp" />

            <TextView
                android:id="@+id/titulotres"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="USO DE LA INFORMACIÓN RECOLECTADA"
                android:textAlignment="center"
                android:textSize="18dp"
                android:textStyle="bold" />

            <com.codesgood.views.JustifiedTextView
                android:id="@+id/parradotres"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:layout_marginTop="20dp"
                android:gravity="center"
                android:text="@string/valparrafortres"
                android:textColor="@color/black"
                android:textSize="17sp" />

            <TextView
                android:id="@+id/titulocuatro"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="ENLACES A TERCEROS"
                android:textAlignment="center"
                android:textSize="18dp"
                android:textStyle="bold" />

            <com.codesgood.views.JustifiedTextView
                android:id="@+id/parradoCuatro"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:layout_marginTop="20dp"
                android:gravity="center"
                android:text="@string/parraforCuatro"
                android:textColor="@color/black"
                android:textSize="17sp" />
            <Button
                android:id="@+id/btnregresar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Regresar"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"/>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</ScrollView>