<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SingUp">

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="635dp"
        android:layout_height="383dp"
        android:layout_marginTop="-180dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/fonte" />

    <Button
        android:id="@+id/btnGuardarRegistro"
        android:layout_width="259dp"
        android:layout_height="53dp"
        android:layout_marginBottom="76dp"
        android:background="@drawable/butnsignup"
        android:text="REGISTRARSE"
        android:textSize="17sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.598"

        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/txtNombre"
        android:layout_width="289dp"
        android:layout_height="50dp"
        android:background="@drawable/custom_edittext_background"
        android:drawableStart="@drawable/baseline_nombre"
        android:drawablePadding="10dp"
        android:hint="Nombre"
        android:inputType="text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.557"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/txtCelular"
        android:layout_width="289dp"
        android:layout_height="50dp"
        android:background="@drawable/custom_edittext_background"
        android:drawableStart="@drawable/baseline_celular"
        android:drawablePadding="10dp"
        android:ems="9"
        android:hint="Celular"
        android:inputType="text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.557"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtEmail2"
        app:layout_constraintVertical_bias="0.03" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="155dp"
        android:layout_height="45dp"
        android:text="REGISTRO "
        android:textAlignment="center"
        android:textSize="27sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.25" />

    <EditText
        android:id="@+id/txtpassword2"
        android:layout_width="289dp"
        android:layout_height="50dp"
        android:background="@drawable/custom_edittext_background"
        android:drawableStart="@drawable/baseline_password"
        android:drawablePadding="10dp"
        android:ems="10"
        android:hint="Password"
        android:inputType="textPassword"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.557"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtCelular"
        app:layout_constraintVertical_bias="0.039" />

    <EditText
        android:id="@+id/txtPasswordConfir"
        android:layout_width="289dp"
        android:layout_height="50dp"
        android:background="@drawable/custom_edittext_background"
        android:drawableStart="@drawable/baseline_password"
        android:drawablePadding="10dp"
        android:ems="10"
        android:hint="Confirma Password"
        android:inputType="textPassword"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.557"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtpassword2"
        app:layout_constraintVertical_bias="0.048" />

    <EditText
        android:id="@+id/txtApellido"
        android:layout_width="289dp"
        android:layout_height="50dp"
        android:background="@drawable/custom_edittext_background"
        android:drawableStart="@drawable/baseline_nombre"
        android:drawablePadding="10dp"
        android:hint="Apellido"
        android:inputType="text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.557"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtNombre"
        app:layout_constraintVertical_bias="0.021" />

    <EditText
        android:id="@+id/txtEmail2"
        android:layout_width="289dp"
        android:layout_height="50dp"
        android:background="@drawable/custom_edittext_background"
        android:drawableStart="@drawable/email_24"
        android:drawablePadding="14dp"
        android:hint="Email"
        android:inputType="text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.557"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtApellido"
        app:layout_constraintVertical_bias="0.031" />

    <Button
        android:id="@+id/btnIniciar"
        android:layout_width="259dp"
        android:layout_height="53dp"
        android:background="@drawable/custom_edittext_background"
        android:text="@string/vlsingin"
        android:textColor="@color/colorPrimary"
        android:textColorLink="@color/colorSurface"
        android:textSize="17sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.598"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnGuardarRegistro"
        app:layout_constraintVertical_bias="0.393" />

    <TextView
        android:id="@+id/tvterminosycondiciones"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/vaterminosycondiciones"
        android:textColor="@color/design_default_color_primary_variant"
        android:textSize="12sp"

        app:layout_constraintBottom_toTopOf="@+id/btnGuardarRegistro"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.831"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtPasswordConfir"
        app:layout_constraintVertical_bias="0.458" />

    <TextView
        android:id="@+id/tvterminosycondicioness"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/terminosycondi"
        android:textColor="@color/colorAccent"
        android:textSize="12sp"
        app:layout_constraintBottom_toTopOf="@+id/btnGuardarRegistro"
        app:layout_constraintEnd_toStartOf="@+id/tvterminosycondiciones"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtPasswordConfir"
        app:layout_constraintVertical_bias="0.458" />

    <CheckBox
        android:id="@+id/checkterminos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:textColor="@color/colorAccent"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/tvterminosycondicioness"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.822" />


</androidx.constraintlayout.widget.ConstraintLayout>